--- a/src/main/resources/templates/alterarProdutoEstoquista.html
+++ b/src/main/resources/templates/alterarProdutoEstoquista.html
@@ -33,73 +33,76 @@
     </style>
 </head>
 <body>
-<div class="container fundoTela">
-    <p class="text-center fs-1 text-white">Alterar o Cadastro do Produto</p>
-    <hr class="text-white">
-    <form th:action="@{/admin/alterarProduto}" method="post" th:object="${produto}" id="formCadastroProduto" enctype="multipart/form-data">
-        <input type="hidden" id="id" name="idProduto" th:value="${produto.idProduto}">
-        <div class="row">
-            <div class="col-md-6 mb-3">
-                <label for="nome" class="form-label text-white">Nome</label>
-                <input type="text" class="form-control inputPadrao" id="nome" name="nomeProduto" maxlength="200" th:value="${produto.nomeProduto}" readonly>
-            </div>
-            <div class="col-md-6 mb-3">
-                <label for="valor" class="form-label text-white">Valor</label>
-                <input type="number" class="form-control inputPadrao" id="valor" name="precoProduto" step="0.01" min="1"  th:value="${produto.precoProduto}" readonly>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 mb-3">
-                <label for="quantidade" class="form-label text-white">Quantidade</label>
-                <input type="number" class="form-control inputPadrao" id="quantidade" name="qtdEstoque" min="1"  th:value="${produto.qtdEstoque}" required>
-            </div>
-            <div class="col-md-6 mb-3">
-                <label for="avaliacao" class="form-label text-white">Avaliação</label>
-                <input type="number" class="form-control inputPadrao" id="avaliacao" name="avaliacaoProduto" min="0" max="5" step="0.5" th:value="${produto.avaliacaoProduto}" readonly>
-            </div>
-        </div>
-        <div class="mb-3">
-            <label for="descricao" class="form-label">Descrição</label>
-            <textarea class="form-control" id="descricao" name="descricaoProduto" rows="3" maxlength="1998" style="border: none; box-shadow: 1px 1px 6px #0000001c; border-bottom: 1px solid #ccc; color: white; background-color: transparent;" th:text="${produto.descricaoProduto}" readonly></textarea>
-        </div>
+    <div class="container fundoTela">
+        <p class="text-center fs-1 text-white">Alterar o Cadastro do Produto</p>
+        <hr class="text-white">
+        <div id="modalMessages" class="position-absolute"></div>
 
-        <div class="mb-3">
-            <label for="imagem" class="form-label text-white">Imagens</label>
-            <input type="file" class="form-control inputPadrao text-white" id="imagem" name="imagemInput" readonly>
-        </div>
-        <input type="hidden" id="imagensParaRemover" name="imagensParaRemover">
-        <th:block th:each="imagem, iterStat : ${produto.imagens}">
-            <input th:if="${imagem.imagemPrincipal}" type="hidden" id="imagemPrincipal" name="imagemPrincipalNova" th:value="${imagem.imagem_id}">
-        </th:block>
-        <div id="preview" class="row p-2 justify-content-center">
-        </div>
-        <div id="preview2" class="row p-2 justify-content-center">
-            <span class="text-center" style="color: white;">Imagens Cadastradas</span>
-            <div th:each="imagem, iterStat : ${produto.imagens}" class="card p-2 m-1" style="width: 15rem;">
-                <button type="button" class="btn btn-danger btn-remove m-2" aria-label="Remover" th:data-id="${imagem.imagem_id}">Remover</button>
-                <img th:src="${'/'+imagem.url}" alt="Imagem-produto" class="card-img-top">
-                <div class="card-body d-flex flex-column">
-                    <div class="form-check mt-auto">
-                        <input class="form-check-input" type="radio" name="imgPrincipal" th:id="'imgPrincipalRadio' + ${iterStat.index}" th:value="${imagem.imagem_id}" th:checked="${imagem.imagemPrincipal} ? 'checked' : null">
-                        <label class="form-check-label" th:for="'imgPrincipalRadio' + ${iterStat.index}">Imagem principal</label>
+        <form th:action="@{/estoque/alterarProduto}" method="post" th:object="${produto}" id="formCadastroProduto" enctype="multipart/form-data">
+          <input type="hidden" id="id" name="idProduto" th:value="${produto.idProduto}">
+            <input type="hidden" id="statusProduto" name="statusProduto" th:value="${produto.statusProduto}" >
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    <label for="nome" class="form-label text-white">Nome</label>
+                    <input type="text" class="form-control inputPadrao" id="nome" name="nomeProduto" maxlength="200" th:value="${produto.nomeProduto}" readonly>
+                </div>
+                <div class="col-md-6 mb-3">
+                    <label for="valor" class="form-label text-white">Valor</label>
+                    <input type="number" class="form-control inputPadrao" id="valor" name="precoProduto" step="0.01" min="1"  th:value="${produto.precoProduto}" readonly>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    <label for="quantidade" class="form-label text-white">Quantidade</label>
+                    <input type="number" class="form-control inputPadrao" id="quantidade" name="qtdEstoque" min="1"  th:value="${produto.qtdEstoque}" required>
+                </div>
+                <div class="col-md-6 mb-3">
+                    <label for="avaliacao" class="form-label text-white">Avaliação</label>
+                    <input type="number" class="form-control inputPadrao" id="avaliacao" name="avaliacaoProduto" min="0" max="5" step="0.5" th:value="${produto.avaliacaoProduto}" readonly>
+                </div>
+            </div>
+            <div class="mb-3">
+                <label for="descricao" class="form-label">Descrição</label>
+                <textarea class="form-control" id="descricao" name="descricaoProduto" rows="3" maxlength="1998" style="border: none; box-shadow: 1px 1px 6px #0000001c; border-bottom: 1px solid #ccc; color: white; background-color: transparent;" th:text="${produto.descricaoProduto}" readonly></textarea>
+            </div>
+
+            <!-- <div class="mb-3">
+                <label for="imagem" class="form-label text-white">Imagens</label>
+                <input type="file" class="form-control inputPadrao text-white" id="imagem" name="imagemInput" multiple>
+            </div> -->
+            <input type="hidden" id="imagensParaRemover" name="imagensParaRemover">
+            
+            <th:block th:each="imagem, iterStat : ${produto.imagens}">
+                <input th:if="${imagem.imagemPrincipal}" type="hidden" id="imagemPrincipal" name="imagemPrincipalNova" th:value="${imagem.imagem_id}">
+            </th:block>
+            <div id="preview" class="row p-2 justify-content-center">
+            </div>
+            <div id="preview2" class="row p-2 justify-content-center">
+                <span class="text-center" style="color: white;">Imagens Cadastradas</span>
+                <div th:each="imagem, iterStat : ${produto.imagens}" class="card p-2 m-1" style="width: 15rem;">
+                    <img th:src="${'/'+imagem.url}" alt="Imagem-produto" class="card-img-top">
+                    <div class="card-body d-flex flex-column">
+                        <div class="form-check mt-auto">
+                            <input class="form-check-input" type="radio" name="imgPrincipal" th:id="'imgPrincipalRadio' + ${iterStat.index}" th:value="${imagem.imagem_id}" th:checked="${imagem.imagemPrincipal} ? 'checked' : null">
+                            <label class="form-check-label" th:for="'imgPrincipalRadio' + ${iterStat.index}">Imagem principal</label>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-12">
-            <div id="preview" class="row p-2 justify-content-center">
+            <div class="col-md-12">
+                <div id="preview" class="row p-2 justify-content-center">
+                </div>
             </div>
-        </div>
 
 
-        <div class="d-flex justify-content-end mt-4">
-            <button type="submit" class="btn btn-primary btn-sm me-2 buttonSalvar">Salvar Alteração</button>
-            <a href="/admin/listarProdutos" class="btn btn-secondary btn-sm">Cancelar</a>
-        </div>
-    </form>
-</div>
+            <div class="d-flex justify-content-end mt-4">
+                <button type="submit" class="btn btn-primary btn-sm me-2 buttonSalvar">Salvar Alteração</button>
+                <a href="/estoque/listarProdutos" class="btn btn-secondary btn-sm">Cancelar</a>
+            </div>
+        </form>
+    </div>
 
-<script>
+    <script>
       function updateRadioInputs() {
       var preview = document.getElementById('preview');
       var radios = preview.querySelectorAll('.form-check-input');
@@ -202,7 +205,21 @@
     });
 
 
+    document.getElementById('modalCadastroProd').addEventListener('submit', function (e) {
+      var radios = document.getElementsByName('imgPrincipal');
+      var formValid = false;
 
+      var i = 0;
+      while (!formValid && i < radios.length) {
+        if (radios[i].checked) formValid = true;
+        i++;
+      }
+
+      if (!formValid) {
+        alert("Por favor, selecione uma imagem principal.");
+        e.preventDefault();
+      }
+    });
 
 
 
