--- a/src/main/resources/templates/exibirProduto.html
+++ b/src/main/resources/templates/exibirProduto.html
@@ -78,15 +78,22 @@ hr{
     border: none;
 }
 
-body{
-    background: linear-gradient(to bottom, #000000, #000000f0);
+body {
+  background-image: url('../imagens/3.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  
 }
+.corFundo {
+    background: linear-gradient(to bottom, #000000, #000000f0);
+  }
 
 </style>
 <body>
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary corFundo">
-    <div class="container">
+    <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img th:src="@{/imagens/logoWinery250x250new.png}" width="150px" alt="Logo da Winery">
         </a>
