--- a/src/main/resources/templates/homeBackOffice.html
+++ b/src/main/resources/templates/homeBackOffice.html
@@ -19,7 +19,7 @@
 <body class="corFundo">
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary corFundo">
-    <div class="container">
+    <div class="container-fluid">
         <a class="navbar-brand" href="/home">
             <img th:src="@{/imagens/logoWinery250x250new.png}" width="150px" alt="Logo da Winery">
         </a>
