--- a/src/main/resources/templates/listaProduto.html
+++ b/src/main/resources/templates/listaProduto.html
@@ -16,7 +16,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary corFundo">
-    <div class="container">
+    <div class="container-fluid">
         <a class="navbar-brand" href="/home">
             <img th:src="@{/imagens/logoWinery250x250new.png}" width="150px" alt="Logo da Winery">
         </a>
