--- a/src/main/resources/templates/listaProdutoEstoquista.html
+++ b/src/main/resources/templates/listaProdutoEstoquista.html
@@ -20,7 +20,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary corFundo">
-    <div class="container">
+    <div class="container-fluid">
         <a class="navbar-brand" href="/homeEstoque">
             <img th:src="@{/imagens/logoWinery250x250new.png}" width="150px" alt="Logo da Winery">
         </a>
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="/admin/listarProdutos">
+                    <a class="nav-link text-white" href="/estoque/listarProdutos">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag-check" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M10.854 8.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
                             <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"/>
@@ -57,9 +57,8 @@
         <h1 >Lista de Produtos</h1>
     </div>
     <div class="div-funcoes">
-        <button class="botaoNovo" data-bs-toggle="modal" data-bs-target="#exampleModal">+ Novo</button>
         <div class="div-funcoes2">
-            <form th:action="@{/admin/filtroNomeProduto}" method="get">
+            <form th:action="@{/estoque/filtroNomeProduto}" method="get">
                 <input type="text" class="input-buscar" placeholder="Pesquisar ..." name="nomeProduto">
                 <button type="submit" class="lupa-button"><i class="fas fa-search"></i></button>
             </form>
@@ -101,17 +100,17 @@
         <ul>
             <!-- Link para a página anterior -->
             <li th:if="${produtos.hasPrevious()}">
-                <a th:href="@{/admin/listarProdutos(page=${produtos.previousPageable().pageNumber})}" class="page-link">Anterior</a>
+                <a th:href="@{/estoque/listarProdutos(page=${produtos.previousPageable().pageNumber})}" class="page-link">Anterior</a>
             </li>
 
             <!-- Links para páginas numéricas -->
             <li th:each="i : ${#numbers.sequence(0, produtos.totalPages - 1)}">
-                <a th:href="@{/admin/listarProdutos(page=${i})}" class="page-link" th:text="${i + 1}"></a>
+                <a th:href="@{/estoque/listarProdutos(page=${i})}" class="page-link" th:text="${i + 1}"></a>
             </li>
 
             <!-- Link para a próxima página -->
             <li th:if="${produtos.hasNext()}">
-                <a th:href="@{/admin/listarProdutos(page=${produtos.nextPageable().pageNumber})}" class="page-link">Próximo</a>
+                <a th:href="@{/estoque/listarProdutos(page=${produtos.nextPageable().pageNumber})}" class="page-link">Próximo</a>
             </li>
         </ul>
     </nav>
