--- a/src/main/resources/templates/alterarProduto.html
+++ b/src/main/resources/templates/alterarProduto.html
@@ -67,19 +67,19 @@
             </div>
 
             <div class="mb-3">
-                <label for="imagem" class="form-label text-white">Imagens</label>
-                <input type="file" class="form-control inputPadrao text-white" id="imagem" name="imagemInput" multiple>
+                <label for="imagemInput" class="form-label">Imagens</label>
+                <input type="file" class="form-control" id="imagemInput" name="imagemInput" multiple>
             </div>
             <input type="hidden" id="imagensParaRemover" name="imagensParaRemover">
-            
             <th:block th:each="imagem, iterStat : ${produto.imagens}">
-                <input th:if="${imagem.imagemPrincipal}" type="hidden" id="imagemPrincipal" name="imagemPrincipalNova" th:value="${imagem.imagem_id}">
+                <input th:if="${imagem.imagemPrincipal}" type="hidden" id="imagenPrinclAt" name="imagenPrinclAt" th:value="${imagem.imagem_id}">
             </th:block>
-            <div id="preview" class="row p-2 justify-content-center">
-            </div>
+
+
             <div id="preview2" class="row p-2 justify-content-center">
-                <span class="text-center" style="color: white;">Imagens Cadastradas</span>
+                <span class="text-center">Imagens Cadastradas</span>
                 <div th:each="imagem, iterStat : ${produto.imagens}" class="card p-2 m-1" style="width: 15rem;">
+                    <button type="button" class="btn btn-danger btn-remove m-2" aria-label="Remover" th:data-id="${imagem.imagem_id}">Remover</button>
                     <img th:src="${'/'+imagem.url}" alt="Imagem-produto" class="card-img-top">
                     <div class="card-body d-flex flex-column">
                         <div class="form-check mt-auto">
@@ -89,6 +89,8 @@
                     </div>
                 </div>
             </div>
+<!--            <div class="col-md-12">-->
+<!--                <div id-->
             <div class="col-md-12">
                 <div id="preview" class="row p-2 justify-content-center">
                 </div>
@@ -102,136 +104,13 @@
         </form>
     </div>
 
-    <script>
-      function updateRadioInputs() {
-      var preview = document.getElementById('preview');
-      var radios = preview.querySelectorAll('.form-check-input');
-      var labels = preview.querySelectorAll('.form-check-label');
-      for (var i = 0; i < radios.length; i++) {
-        radios[i].id = 'exampleRadios' + i;
-        radios[i].value = i;
-        labels[i].htmlFor = 'exampleRadios' + i;
-      }
-    }
-
-    function removeImage(card, file) {
-      var input = document.getElementById('imagem');
-      var preview = document.getElementById('preview');
-
-      preview.removeChild(card);
-
-      // Cria um novo objeto de FormData
-      var dataTransfer = new DataTransfer();
-      for (var i = 0; i < input.files.length; i++) {
-        if (input.files[i] !== file) {
-          dataTransfer.items.add(input.files[i]);
-        }
-      }
-
-      // Atualiza o input com os arquivos restantes
-      input.files = dataTransfer.files;
-    }
-
-    function handleFile(file, i) {
-      console.log(file.name);
-      if (!file.type.match('image/jpeg') && !file.type.match('image/png')) {
-        alert('Só são permitidos arquivos de imagem (jpg, jpeg, png).');
-        this.value = '';
-        return;
-      }
-
-      var reader = new FileReader();
-
-      reader.onload = function (e) {
-        var img = document.createElement('img');
-        img.src = e.target.result;
-        img.alt = 'Imagem-produto';
-        img.className = 'card-img-top';
-
-        var cardBody = document.createElement('div');
-        cardBody.className = 'card-body d-flex flex-column';
-
-        var formCheck = document.createElement('div');
-        formCheck.className = 'form-check mt-auto';
-
-        var radioInput = document.createElement('input');
-        radioInput.className = 'form-check-input';
-        radioInput.type = 'radio';
-        radioInput.name = 'imgPrincipal';
-        radioInput.id = 'exampleRadios' + i;
-        radioInput.value = i;
-        var radioLabel = document.createElement('label');
-        radioLabel.className = 'form-check-label';
-        radioLabel.htmlFor = 'exampleRadios' + i;
-        radioLabel.textContent = 'Imagem principal';
-
-        formCheck.appendChild(radioInput);
-        formCheck.appendChild(radioLabel);
-        cardBody.appendChild(formCheck);
-
-        var closeButton = document.createElement('button');
-        closeButton.type = 'button';
-        closeButton.className = 'btn-close';
-        closeButton.setAttribute('aria-label', 'Close');
-
-        var card = document.createElement('div');
-        card.className = 'card p-2 m-1';
-        card.style.width = '18rem';
-        card.appendChild(closeButton);
-        card.appendChild(img);
-        card.appendChild(cardBody);
-
-        closeButton.addEventListener('click', function () {
-          removeImage(card, file);
-          updateRadioInputs()
-        });
-
-        preview.appendChild(card);
-      };
-
-      reader.readAsDataURL(file);
-    }
-
-    document.body.addEventListener('change', function (event) {
-      if (event.target.id === 'imagem') {
-        var preview = document.getElementById('preview');
-        preview.innerHTML = '';
-
-
-        for (var i = 0; i < event.target.files.length; i++) {
-          handleFile(event.target.files[i], i);
-        }
-      }
-    });
-
-
-    document.getElementById('modalCadastroProd').addEventListener('submit', function (e) {
-      var radios = document.getElementsByName('imgPrincipal');
-      var formValid = false;
-
-      var i = 0;
-      while (!formValid && i < radios.length) {
-        if (radios[i].checked) formValid = true;
-        i++;
-      }
-
-      if (!formValid) {
-        alert("Por favor, selecione uma imagem principal.");
-        e.preventDefault();
-      }
-    });
+<script>
 
 
 
 
-
-
-
-    //---------------------------------------------------------------
-
-
-    document.addEventListener("DOMContentLoaded", function () {
-  const imagemPrincipalNova = document.getElementById("imagemPrincipal");
+document.addEventListener("DOMContentLoaded", function () {
+  const imagenPrinclAt = document.getElementById("imagenPrinclAt");
   const imgPrincipalRadios = document.querySelectorAll(
     'input[name="imgPrincipal"]'
   );
@@ -239,7 +118,7 @@
   imgPrincipalRadios.forEach((radio, index) => {
     radio.addEventListener("change", function () {
       if (this.checked) {
-        imagemPrincipal.value = this.value;
+        imagenPrinclAt.value = this.value;
       }
     });
   });
@@ -317,7 +196,7 @@ function handleFile(file, i) {
 
     radioInput.addEventListener("change", function () {
       if (this.checked) {
-        imagemPrincipal.value = "";
+        imagenPrinclAt.value = "";
         radioInput.value = this.value;
       }
     });
@@ -388,6 +267,6 @@ document
       e.preventDefault();
     }
   });
-    </script>
+</script>
 </body>
 </html>
